# K9Audit

./: .gitignore  AGENTS.md  Install-K9Solo.ps1  LICENSE  PATENTS.md  README.md  SKILL.md  case_001_evidence.html  check_frontend.ps1  claude_settings.json  hook.py  index (1).html  introduction.mdx  k9_case001_replay.py  k9_case002_replay.py  k9_case003_replay.py  k9_concurrency_test.py  k9_live_test.py  k9_repo_audit (1).py  k9_repo_audit.py  k9_repo_cleanup.py  k9audit_cieu_simulation.py  k9audit_openclaw_test.py  logger.py  mint.json  plugin.json  push_safe.ps1  pyproject.toml  quickstart.mdx  release.ps1  requirements.txt  setup_k9audit.ps1
.claude/: settings.json
.github/ISSUE_TEMPLATE/: hard_case.yml
challenge/: README.md  challenge_logs.jsonl  cieu_session.jsonl
challenge/examples/: case_000_live_verified.jsonl  case_000_quant_trading_agent.md  case_001_rebuild_loop.md  case_002_live_verified.jsonl  case_002_read_then_write.md  case_003_self_audit.md  (+2 more)
commands/: k9-audit.md
concepts/: cieu-five-tuple.mdx
docs/: CIEU_spec.md  PRODUCT_VISION.md  causal_tracing.md  code_invariants.md  index.html  integrations.md  k9_demo.html  roadmap_phase2.md  定位修正工作清单.md
k9log/: __init__.py  __main__.py  agents_md_llm.py  agents_md_parser.py  alerting.py  auditor.py  autocontract.py  causal_analyzer.py  cli.py  constraints.py  contract_builder.py  core.py  hook.py  hook_post.py  identity.py  langchain_adapter.py  ledger_sync.py  logger.py  openclaw.py  openclaw_watcher.py  redact.py  report.py  tracer.py  verifier.py
server/: dashboard.html  main.py  ~$shboard.html
(+10 files in other folders)
