[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k9audit-hook"
version = "0.2.4"
description = "K9 Audit with Hook Connector — for Claude Code and hook-compatible agents"
license = "AGPL-3.0-or-later"
authors = [{name = "Haotian Liu"}]
requires-python = ">=3.11"
dependencies = ["click>=8.0", "rich>=13.0", "requests>=2.28", "cryptography>=41.0"]

[project.scripts]
k9log = "k9log.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["k9log*"]
